Adapt prints in notebooks

--- a/notebooks/COLBERTKP-reranking.ipynb
+++ b/notebooks/COLBERTKP-reranking.ipynb
@@ -1,39 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "2da5a316",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ JAVA_HOME set to: /usr/lib/jvm/java-21-openjdk-amd64\n",
-      "✓ PyTerrier initialized successfully\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Set JAVA_HOME before importing PyTerrier\n",
-    "import os\n",
-    "os.environ['JAVA_HOME'] = '/usr/lib/jvm/java-21-openjdk-amd64'\n",
-    "\n",
-    "# Suppress warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "# Now initialize PyTerrier\n",
-    "import pyterrier as pt\n",
-    "if not pt.started():\n",
-    "    pt.init()\n",
-    "\n",
-    "print(f\"✓ JAVA_HOME set to: {os.environ['JAVA_HOME']}\")\n",
-    "print(f\"✓ PyTerrier initialized successfully\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1c3426fb",
    "metadata": {},
@@ -53,18 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "6313ccac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ All libraries imported successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from pyterrier.measures import *\n",
@@ -88,25 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "344c8892",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of topics: 43\n",
-      "Number of qrels: 9260\n",
-      "\n",
-      "Example topics:\n",
-      "       qid                                  query\n",
-      "0   156493                       do goldfish grow\n",
-      "1  1110199              what is wifi vs bluetooth\n",
-      "2  1063750  why did the us volunterilay enter ww1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the dataset\n",
     "dataset = pt.get_dataset(\"irds:msmarco-passage/trec-dl-2019/judged\")\n",
@@ -118,23 +62,15 @@
     "print(f\"Number of topics: {len(topics)}\")\n",
     "print(f\"Number of qrels: {len(qrels)}\")\n",
     "print(\"\\nExample topics:\")\n",
-    "print(topics.head(3))"
+    "topics.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "32244a60",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ BM25 retriever loaded successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "index = PisaIndex.from_dataset('msmarco_passage')\n",
     "bm25 = index.bm25(num_results=1000)\n",
@@ -156,57 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "cd683cf2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of ColBERT were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['linear.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nov 12, 10:10:23] #> Loading model checkpoint.\n",
-      "[nov 12, 10:10:23] #> Loading checkpoint ../resources/models/colbert-cosine-200k.dnn\n",
-      "[nov 12, 10:10:23] #> Loading checkpoint ../resources/models/colbert-cosine-200k.dnn\n",
-      "[nov 12, 10:10:24] #> checkpoint['epoch'] = 0\n",
-      "[nov 12, 10:10:24] #> checkpoint['batch'] = 200000\n",
-      "[nov 12, 10:10:24] #> checkpoint['epoch'] = 0\n",
-      "[nov 12, 10:10:24] #> checkpoint['batch'] = 200000\n",
-      "✓ ColBERT model loaded\n",
-      "✓ ColBERT model loaded\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of ColBERT were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['linear.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nov 12, 10:10:25] #> Loading model checkpoint.\n",
-      "[nov 12, 10:10:25] #> Loading checkpoint ../resources/models/colbertkp-cosine-25k.dnn\n",
-      "[nov 12, 10:10:25] #> Loading checkpoint ../resources/models/colbertkp-cosine-25k.dnn\n",
-      "[nov 12, 10:10:26] #> checkpoint['epoch'] = 0\n",
-      "[nov 12, 10:10:26] #> checkpoint['batch'] = 25000\n",
-      "[nov 12, 10:10:26] #> checkpoint['epoch'] = 0\n",
-      "[nov 12, 10:10:26] #> checkpoint['batch'] = 25000\n",
-      "✓ ColBERTKP model loaded\n",
-      "✓ ColBERTKP model loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Note: For re-ranking, we don't need index directories since we're using text_scorer()\n",
     "# which scores directly from text without requiring pre-built indices\n",
@@ -264,18 +153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "bf85d0f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Re-ranking pipelines created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create re-ranking pipelines\n",
     "colbert_pipeline = bm25 >> pt.text.get_text(dataset, \"text\") >> colbert_factory.text_scorer()\n",
@@ -299,27 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "450a9b9a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        name  AP(rel=2)@1000  nDCG@10  RR(rel=2)@10\n",
-      "0       BM25          0.3031   0.4989        0.6780\n",
-      "1    ColBERT          0.4595   0.7039        0.8353\n",
-      "2  ColBERTKP          0.4609   0.7106        0.8469\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define evaluation metrics for TREC DL 2019\n",
     "metrics = [AP(rel=2)@1000, nDCG@10, RR(rel=2)@10]\n",
     "\n",
     "# Run experiment comparing all three models\n",
-    "results = pt.Experiment(\n",
+    "pt.Experiment(\n",
     "    [bm25, colbert_pipeline, colbertkp_pipeline],\n",
     "    topics,\n",
     "    qrels,\n",
@@ -327,9 +197,7 @@
     "    names=[\"BM25\", \"ColBERT\", \"ColBERTKP\"],\n",
     "    batch_size=1024,\n",
     "    round=4,\n",
-    ")\n",
-    "\n",
-    "print(results)"
+    ")"
    ]
   },
   {
@@ -344,28 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "cddc6527",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original query examples:\n",
-      "       qid                                  query\n",
-      "0   156493                       do goldfish grow\n",
-      "1  1110199              what is wifi vs bluetooth\n",
-      "2  1063750  why did the us volunterilay enter ww1\n",
-      "\n",
-      "Keyphrase query examples:\n",
-      "       qid                          query\n",
-      "0   156493                goldfish growth\n",
-      "1  1110199              wifi vs bluetooth\n",
-      "2  1063750  us volunteer entry ww1 reason\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load keyphrases extracted by Mistral\n",
     "keyphrases_path = \"../resources/data/trec_2019_test_mistral_kps.json\"\n",
@@ -380,31 +230,20 @@
     "        topics_kp.at[i, \"query\"] = kps_json[row[\"qid\"]]\n",
     "\n",
     "print(\"Original query examples:\")\n",
-    "print(topics[[\"qid\", \"query\"]].head(3))\n",
+    "topics[[\"qid\", \"query\"]].head(3)\n",
     "print(\"\\nKeyphrase query examples:\")\n",
-    "print(topics_kp[[\"qid\", \"query\"]].head(3))"
+    "topics_kp[[\"qid\", \"query\"]].head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "33d912ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        name  AP(rel=2)@1000  nDCG@10  RR(rel=2)@10\n",
-      "0       BM25          0.2859   0.4751        0.6120\n",
-      "1    ColBERT          0.4499   0.6849        0.8516\n",
-      "2  ColBERTKP          0.4724   0.7059        0.8876\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run experiment with keyphrase queries\n",
-    "results_kp = pt.Experiment(\n",
+    "pt.Experiment(\n",
     "    [bm25, colbert_pipeline, colbertkp_pipeline],\n",
     "    topics_kp,\n",
     "    qrels,\n",
@@ -412,9 +251,7 @@
     "    names=[\"BM25\", \"ColBERT\", \"ColBERTKP\"],\n",
     "    batch_size=1024,\n",
     "    round=4\n",
-    ")\n",
-    "\n",
-    "print(results_kp)"
+    ")"
    ]
   },
   {
