--- a/notebooks/COLBERTKP-reranking.ipynb
+++ b/notebooks/COLBERTKP-reranking.ipynb
@@ -20,10 +20,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "0bd229a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ JAVA_HOME set to: /usr/lib/jvm/java-21-openjdk-amd64\n",
+      "✓ PyTerrier initialized successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set JAVA_HOME before importing PyTerrier\n",
+    "import os\n",
+    "os.environ['JAVA_HOME'] = '/usr/lib/jvm/java-21-openjdk-amd64'\n",
+    "\n",
+    "# Suppress warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Now initialize PyTerrier\n",
+    "import pyterrier as pt\n",
+    "if not pt.started():\n",
+    "    pt.init()\n",
+    "\n",
+    "print(f\"✓ JAVA_HOME set to: {os.environ['JAVA_HOME']}\")\n",
+    "print(f\"✓ PyTerrier initialized successfully\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "6313ccac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All libraries imported successfully\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from pyterrier.measures import *\n",
@@ -47,10 +88,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "344c8892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of topics: 43\n",
+      "Number of qrels: 9260\n",
+      "\n",
+      "Example topics:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>qid</th>\n",
+       "      <th>query</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>156493</td>\n",
+       "      <td>do goldfish grow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1110199</td>\n",
+       "      <td>what is wifi vs bluetooth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1063750</td>\n",
+       "      <td>why did the us volunterilay enter ww1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       qid                                  query\n",
+       "0   156493                       do goldfish grow\n",
+       "1  1110199              what is wifi vs bluetooth\n",
+       "2  1063750  why did the us volunterilay enter ww1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the dataset\n",
     "dataset = pt.get_dataset(\"irds:msmarco-passage/trec-dl-2019/judged\")\n",
@@ -67,10 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "32244a60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ BM25 retriever loaded successfully\n"
+     ]
+    }
+   ],
    "source": [
     "index = PisaIndex.from_dataset('msmarco_passage')\n",
     "bm25 = index.bm25(num_results=1000)\n",
@@ -92,10 +208,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cd683cf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of ColBERT were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['linear.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nov 12, 10:38:38] #> Loading model checkpoint.\n",
+      "[nov 12, 10:38:38] #> Loading checkpoint ../resources/models/colbert-cosine-200k.dnn\n",
+      "[nov 12, 10:38:39] #> checkpoint['epoch'] = 0\n",
+      "[nov 12, 10:38:39] #> checkpoint['batch'] = 200000\n",
+      "✓ ColBERT model loaded\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of ColBERT were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['linear.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nov 12, 10:38:40] #> Loading model checkpoint.\n",
+      "[nov 12, 10:38:40] #> Loading checkpoint ../resources/models/colbertkp-cosine-25k.dnn\n",
+      "[nov 12, 10:38:41] #> checkpoint['epoch'] = 0\n",
+      "[nov 12, 10:38:41] #> checkpoint['batch'] = 25000\n",
+      "✓ ColBERTKP model loaded\n"
+     ]
+    }
+   ],
    "source": [
     "# Note: For re-ranking, we don't need index directories since we're using text_scorer()\n",
     "# which scores directly from text without requiring pre-built indices\n",
@@ -153,10 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bf85d0f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Re-ranking pipelines created\n"
+     ]
+    }
+   ],
    "source": [
     "# Create re-ranking pipelines\n",
     "colbert_pipeline = bm25 >> pt.text.get_text(dataset, \"text\") >> colbert_factory.text_scorer()\n",
@@ -180,10 +343,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "450a9b9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>AP(rel=2)@1000</th>\n",
+       "      <th>nDCG@10</th>\n",
+       "      <th>RR(rel=2)@10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BM25</td>\n",
+       "      <td>0.3031</td>\n",
+       "      <td>0.4989</td>\n",
+       "      <td>0.6780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ColBERT</td>\n",
+       "      <td>0.4595</td>\n",
+       "      <td>0.7039</td>\n",
+       "      <td>0.8353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ColBERTKP</td>\n",
+       "      <td>0.4609</td>\n",
+       "      <td>0.7106</td>\n",
+       "      <td>0.8469</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name  AP(rel=2)@1000  nDCG@10  RR(rel=2)@10\n",
+       "0       BM25          0.3031   0.4989        0.6780\n",
+       "1    ColBERT          0.4595   0.7039        0.8353\n",
+       "2  ColBERTKP          0.4609   0.7106        0.8469"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define evaluation metrics for TREC DL 2019\n",
     "metrics = [AP(rel=2)@1000, nDCG@10, RR(rel=2)@10]\n",
@@ -212,10 +440,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cddc6527",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original query examples:\n",
+      "\n",
+      "Keyphrase query examples:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>qid</th>\n",
+       "      <th>query</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>156493</td>\n",
+       "      <td>goldfish growth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1110199</td>\n",
+       "      <td>wifi vs bluetooth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1063750</td>\n",
+       "      <td>us volunteer entry ww1 reason</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       qid                          query\n",
+       "0   156493                goldfish growth\n",
+       "1  1110199              wifi vs bluetooth\n",
+       "2  1063750  us volunteer entry ww1 reason"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load keyphrases extracted by Mistral\n",
     "keyphrases_path = \"../resources/data/trec_2019_test_mistral_kps.json\"\n",
@@ -237,10 +531,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "33d912ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>AP(rel=2)@1000</th>\n",
+       "      <th>nDCG@10</th>\n",
+       "      <th>RR(rel=2)@10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BM25</td>\n",
+       "      <td>0.2859</td>\n",
+       "      <td>0.4751</td>\n",
+       "      <td>0.6120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ColBERT</td>\n",
+       "      <td>0.4499</td>\n",
+       "      <td>0.6849</td>\n",
+       "      <td>0.8516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ColBERTKP</td>\n",
+       "      <td>0.4724</td>\n",
+       "      <td>0.7059</td>\n",
+       "      <td>0.8876</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name  AP(rel=2)@1000  nDCG@10  RR(rel=2)@10\n",
+       "0       BM25          0.2859   0.4751        0.6120\n",
+       "1    ColBERT          0.4499   0.6849        0.8516\n",
+       "2  ColBERTKP          0.4724   0.7059        0.8876"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run experiment with keyphrase queries\n",
     "pt.Experiment(\n",
@@ -253,14 +612,6 @@
     "    round=4\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b22700a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
